--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -5,7 +5,7 @@ description: |
   Hyperion is an open-source ambient lighting implementation for LED setups.
   Supports multiple grabbers, protocols, and devices.
 
-base: core22
+base: core24
 grade: stable
 confinement: strict
 
@@ -13,10 +13,10 @@ source-code: https://github.com/hyperion-project/hyperion.ng
 website: https://hyperion-project.org
 issues: https://github.com/hyperion-project/hyperion.ng/issues
 
-architectures:
-  - build-on: amd64
-  - build-on: arm64
-  - build-on: armhf
+platforms:
+  amd64:
+  arm64:
+  armhf:
 
 apps:
   hyperion-ng:
@@ -41,7 +41,7 @@ apps:
       - x11
       - unity7
     environment:
-      QT_PLUGIN_PATH: $SNAP/usr/lib/$CRAFT_ARCH_TRIPLET_BUILD_FOR/qt6/plugins
+      QT_PLUGIN_PATH: $SNAP/usr/lib/$CRAFT_ARCH_TRIPLET_BUILD_FOR/qt6/plugins   
 
 parts:
   hyperion-ng:
@@ -64,9 +64,9 @@ parts:
       - cmake
       - build-essential
       - qt6-base-dev
-      - libqt6serialport6-dev
+      - qt6-serialport-dev
+      - qt6-websockets-dev
       - libqt6sql6-sqlite
-      - libqt6websockets6-dev
       - libxkbcommon-dev
       - libvulkan-dev
       - libgl1-mesa-dev
@@ -106,14 +106,11 @@ parts:
       - libqt6serialport6
       - libqt6sql6-sqlite
       - libqt6websockets6
-      - qt6-gtk-platformtheme
-      - qt6-qpa-plugins
-      - qt6-wayland
-      - libpython3.10
+      - libpython3.12
       - libusb-1.0-0
       - libasound2
       - libmbedtls14
-      - libprotobuf23
+      - libprotobuf32
       - libturbojpeg
       - libcec6
 
@@ -141,16 +138,16 @@ parts:
   # at runtime from the content and base snaps, they do not need to be included in this snap itself.
   # More info: https://forum.snapcraft.io/t/reducing-the-size-of-desktop-snaps/17280#heading--cleanup-part
   cleanup:
+    plugin: nil
     after:
       - hyperion-ng
-    plugin: nil
     build-snaps:
-      - core22
-      - gnome-42-2204
+      - core24
+      - gnome-46-2404
       - gtk-common-themes
     override-prime: |
       set -eux
-      for snap in core22 gnome-42-2204 gtk-common-themes; do
+      for snap in core24 gnome-46-2404 gtk-common-themes; do
         cd /snap/$snap/current
         find . -type f,l -exec rm -f "$SNAPCRAFT_PRIME/{}" \;
       done
